--- a/src/app/upload/upload.page.html
+++ b/src/app/upload/upload.page.html
@@ -10,7 +10,7 @@
   <ion-list>
     <ion-item-sliding *ngFor="let f of files">
       <ion-item (click)="openFile(f)">
-        <ion-icon name="image" slot="start" *ngIf="f.name.endsWith('jpg')"></ion-icon>
+        <ion-icon name="image" slot="start" *ngIf="f.name.endsWith('jpg') || f.name.endsWith('jpeg')"></ion-icon>
         <ion-icon name="videocam" slot="start" *ngIf="f.name.endsWith('MOV') || f.name.endsWith('mp4')"></ion-icon>
         <ion-icon name="mic" slot="start" *ngIf="f.name.endsWith('wav')"></ion-icon>
  
