--- a/src/app/upload/upload.page.html
+++ b/src/app/upload/upload.page.html
@@ -5,33 +5,40 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
- 
+
 <ion-content>
-  <ion-list>
+  <!-- <ion-list>
     <ion-item-sliding *ngFor="let f of files">
       <ion-item (click)="openFile(f)">
-        <!-- <ion-icon name="image" slot="start" *ngIf="f.name.endsWith('jpg') || f.name.endsWith('jpeg')"></ion-icon>
-        <ion-icon name="videocam" slot="start" *ngIf="f.name.endsWith('MOV') || f.name.endsWith('mp4')"></ion-icon>
-        <ion-icon name="mic" slot="start" *ngIf="f.name.endsWith('wav')"></ion-icon> -->
         <ion-thumbnail slot="start">
-          <img [src]="webview.convertFileSrc(f.nativeURL)">
+          <ion-img [src]="webview.convertFileSrc(f.nativeURL)"></ion-img>
         </ion-thumbnail>
         <ion-label class="ion-text-wrap">
           {{ f.name }}
           <p>{{ f.fullPath }}</p>
         </ion-label>
       </ion-item>
- 
+
       <ion-item-options side="start">
         <ion-item-option (click)="deleteFile(f)" color="danger">
           <ion-icon name="trash" slot="icon-only"></ion-icon>
         </ion-item-option>
       </ion-item-options>
- 
+
     </ion-item-sliding>
-  </ion-list>
+  </ion-list> -->
+  <ion-grid>
+    <ion-row>
+      <ion-col size="4" *ngFor="let f of files">
+        <video height="120" width="120" [src]="webview.convertFileSrc(f.nativeURL)" (click)="showActionSheet(f)" *ngIf="f.name.endsWith('mp4')"></video>
+        <ion-thumbnail *ngIf="!f.name.endsWith('mp4')">
+          <ion-img [src]="webview.convertFileSrc(f.nativeURL)" (click)="showActionSheet(f)"></ion-img>
+        </ion-thumbnail>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
- 
+
 <ion-footer>
   <ion-toolbar color="primary">
     <ion-button fill="clear" expand="full" color="light" (click)="selectMedia()">
